--- a/designSpec/designSpec.tex
+++ b/designSpec/designSpec.tex
@@ -39,6 +39,7 @@
 \begin{versionhistory}
   \vhEntry{1.0}{05.04.18}{HG}{created}
   \vhEntry{1.1}{08.04.18}{HG}{algorithmic analysis added}
+  \vhEntry{1.2}{10.04.18}{RL}{Added Modular structure and uses}
 \end{versionhistory} 
 
 \noindent\textit{By virtue of submitting this document we electronically sign and date that the work being submitted by all the individuals in the group is their exclusive work as a group and we consent to make available the application being developed through SE-2XB3 project, the reports, presentations, and assignments (not including my name and student number) for future teaching purposes.}
@@ -118,6 +119,32 @@ Apache tomcat was used to create a webserver which uses the internal functionali
 \section{Implementation}
 \subsection{Classes and Modules}
 The implementation involved over 30 classes implemented in Java. Additional JavaScript and HTML files were used to create a sophisticated web-based user interface. For a description of each class and module used, JavaDoc documentation can be viewed by opening the \texttt{doc/index.html} folder in the submission archive or by visiting \url{http://trawl.schankula.ca/Trawl/doc}.
+
+
+\subsection {Modular Structure and Uses}
+The requirements in the Requirement Specification Document are achieved by applying modularity and seperation of concerns, which will be shown in the UML diagrams. The table below traces back to requirements for each class interface:\\
+
+\begin{tabular}{| l | l |}
+\hline
+\textbf{Requirements} & \textbf{Modules}\\
+\hline
+Reading input file and dealing with corrupted data (Funcitonal)& WORM.java,FileProcessor.java \\
+\hline
+List of species by family, order, genus  (Funcitonal)& KDT.java, RangeHelper.java, Quickselect.java \\
+\hline
+Historical distribution of records  (Funcitonal) & Histogram.java, RedBlackTree.Java, BasicSearch.java \\
+\hline
+Geographical subgroupings  (Funcitonal) & Graph.java, CC.java \\
+\hline
+Plotting/mapping tools &  BasicSearch.java, CC.java (With Google Maps API) \\
+\hline
+Fast Speed (Non-functional) & KDT.java, Quickselect.java, and RedBlackTree.java \\
+\hline
+Low Memory Usage (Non-functional) & KDT.java, Quickselect.java, and RedBlackTree.java \\
+\hline
+Scalable (Non-functional) & KDT.java, Quickselect.java, and RedBlackTree.java \\
+\hline
+\end{tabular}.
 
 \subsection{Class Organization}
 An overview of the modules included in the \textit{TrawlExpert} is shown in figure \ref{fig:UML}. The \textit{Trawl Expert} implementation efforts were divided into two subteams: Subteam A and Subteam B. Tasks were assigned so as to maximize the parallelization of the development process. As a biproduct, modules were designed to uphold the principles of information hiding, modularity and separation of concerns.
