fixed Red-Black put() existing value, fix Main.java

--- a/designSpec/designSpec.tex
+++ b/designSpec/designSpec.tex
@@ -161,7 +161,7 @@ Secondly, this diagrams represents a key feature of \textit{TrawlExpert} in that
 \begin{figure}[H]
 \includegraphics[width=18cm, trim={6cm 0 6cm 0}, clip]{MainDotJava.pdf}
 
-\caption{UML State machine diagram for \textit{Main.java}, a class that provides console access to the \textit{TrawlExpert}'s main functions. This class accepts search criteria from a user to produce a list of search results, depict a histogram of the records in that result, and compute a count of the search hits.}
+\caption{UML State machine diagram for \textit{main/Main.java}, a class that provides console access to the \textit{TrawlExpert}'s main functions. This class accepts search criteria from a user to produce a list of search results, depict a histogram of the records in that result, and compute a count of the search hits.}
 \label{fig:MainUML}
 \end{figure}
 
@@ -169,7 +169,7 @@ Secondly, this diagrams represents a key feature of \textit{TrawlExpert} in that
 \centering
 \includegraphics[width=18cm, trim={0 0 0 0}, clip]{BioTreeDotJava.pdf}
 
-\caption{UML State machine diagram for \textit{/data/Biotree/BioTree.java}, a class that builds a tree data structure from the scientific name hierarchies (called taxa) of fish. Uses a World Register of Marine Species (Worms) API to identify the correct spelling of species names for misspelled scientific names in the dataset. }
+\caption{UML State machine diagram for \textit{/data/biotree/BioTree.java}, a class that builds a tree data structure from the scientific name hierarchies (called taxa) of fish. Uses a World Register of Marine Species (Worms) API to identify the correct spelling of species names for misspelled scientific names in the dataset. }
 \label{fig:BioTreeUML}
 \end{figure}
 
