--- a/designSpec/designSpec.tex
+++ b/designSpec/designSpec.tex
@@ -39,7 +39,8 @@
 \begin{versionhistory}
   \vhEntry{1.0}{05.04.18}{HG}{created}
   \vhEntry{1.1}{08.04.18}{HG}{algorithmic analysis added}
-  \vhEntry{1.2}{10.04.18}{RL}{Added Modular structure and uses}
+  \vhEntry{1.2}{10.04.18}{RL}{added Modular structure and uses}
+  \vhEntry{1.3}{11.04.18}{CS}{added 2.3.x subsections}
 \end{versionhistory} 
 
 \noindent\textit{By virtue of submitting this document we electronically sign and date that the work being submitted by all the individuals in the group is their exclusive work as a group and we consent to make available the application being developed through SE-2XB3 project, the reports, presentations, and assignments (not including my name and student number) for future teaching purposes.}
@@ -57,23 +58,23 @@ The individual contributions of each team member are described below. Subteam B 
 		\midrule
 		Lawrence Chung
 		& Head of Room Booking \newline Subteam B Member
-		& Implemented the depth first search, connected components algorithms, client code for connected components, Graph building, Node class and Bag class. \\
+		& Implemented the depth first search, connected components algorithms, client code for connected components, Graph building, Node class and Bag class. Oversaw editing of Final Design Document.\\
 		\midrule
 		Haley Glavina
 		& Meeting Minutes Administrator \newline Subteam B Member
-		& Implemented the red-black tree, quickselect, and mergesort algorithms. Designed the final presentation powerpoint, recorded and submitted all meeting minutes, and assembled the final design specification in LaTeX. Generated UML state machine diagrams.\\
+		& Implemented the red-black tree, quickselect, and mergesort algorithms. Wrote \texttt{Histogram} function to sum each year's total individual count. Designed the final presentation slideshow, recorded and submitted all meeting minutes, and assembled the final design specification in LaTeX. Generated UML state machine diagrams.\\
 		\midrule
 		Winnie Liang
 		& Project Log Administrator \newline Subteam A Member
-		& Implemented the module responsible for parsing our data to create related objects, implemented taxonNode ADT. Led user interface development, set up tomcat files and directory structure,  handled communication between the Google Maps APIs and JavaScript code. Overlooked project log entries.\\
+		& Implemented the module responsible for parsing our data to create related objects (FileProcessor), implemented TaxonNode ADT. Led user interface development, set up tomcat files and directory structure, handled communication between the Google Maps APIs and JavaScript code. Overlooked and maintained project log entries.\\
 		\midrule
 		Ray Liu
 		& TA \& Professor Liaison \newline Subteam A Member
-		& Implemented Record ADT, Date ADT, parsing API calls for WORMS API, RangeHelper for Basic Search, Histogram output for command line, histogram output for web interface.\\
+		& Implemented Record ADT, Date ADT, parsing API calls for WORMS API, RangeHelper for Basic Search, histogram output for command line, histogram output for web interface. Oversaw editing of Requirements Specification Document.\\
 		\midrule
 		Christopher Schankula
 		& Team Leader \newline Subteam A Member
-		& Determined the goals for each meeting, implemented the k-d tree algorithm, wrote backend of server, wrote command-line tool. \\		
+		& Determined the goals for each meeting, implemented the k-d tree algorithm, wrote backend of server, wrote command-line tool, implemented the BasicSearch and BasicSearchResult classes, implemented RecordCluster ADT, implemented TrawlExpert model class. Generated UML class diagram.\\		
 		\bottomrule
 	\end{tabular}
 \end{table}
@@ -109,73 +110,118 @@ The test dataset that will be used for purposes of this project is the \textit{U
 \begin{figure}
 \centering
 \includegraphics[width=16cm]{UI.png}
-\caption{The final TrawlExpert web interface allows users to intelligently search for specific taxa and display several helpful statistical and data visualization tools such as maps and histograms.}
+\caption{The final TrawlExpert web interface allows users to intelligently search for specific taxa and display several helpful statistical and data visualization tools such as maps and histograms. A live version of the web interface can be found at \url{http://trawl.schankula.ca/Trawl}}
 \label{fig:UI}
 \end{figure}
 
 Apache tomcat was used to create a webserver which uses the internal functionality and model of TrawlExpert written in Java. The UI allows users to filter by using information about different taxa (their biological relationships to each other, such as family / genus / species, etc) and display several different data outputs such as histograms, heatmaps, maps and population clusters, in addition to viewing raw data in tabular form. The clustering function is shown in \ref{fig:UI}. The \textit{TrawlExpert} is hosted on Google Cloud Platform and can be accessed at \url{http://trawl.schankula.ca/Trawl}. 
 
+\subsection{Glossary of Terms}
+\noindent\textbf{Classification tree:} Tree describing the relationships between taxa (for example, a species is the child of its genus).
+
+\noindent\textbf{Taxon (plural Taxa):} Refers to a classification of a type of biological entity (species, family, etc)
+
+\noindent\textbf{Taxon ID:} The ID given to a taxon in the WORMS database.
+
+\noindent\textbf{Trawl survey:} Using Trawling to collect scientific data \citep{walsh1997efficiency}.
+
+\noindent\textbf{Trawling:} A method of fishing by dragging a net along the bottom of a body of water \citep{walsh1997efficiency}.
+
+\noindent\textbf{WORMS}: World Register of Marine Species, an openly accessible online database.
 
 \section{Implementation}
-\subsection{Classes and Modules}
-The implementation involved over 30 classes implemented in Java. Additional JavaScript and HTML files were used to create a sophisticated web-based user interface. For a description of each class and module used, JavaDoc documentation can be viewed by opening the \texttt{doc/index.html} folder in the submission archive or by visiting \url{http://trawl.schankula.ca/Trawl/doc}.
+The implementation involved over 30 classes implemented in Java. Additional JavaScript and HTML files were used to create a sophisticated web-based user interface. For a complete description of each class and module used, JavaDoc documentation can be viewed by opening the \texttt{doc/index.html} folder in the submission archive or by visiting \url{http://trawl.schankula.ca/Trawl/doc}.
 
 
 \subsection {Modular Structure and Uses}
-The requirements in the Requirement Specification Document are achieved by applying modularity and seperation of concerns, which will be shown in the UML diagrams. The table below traces back to requirements for each class interface:\\
+The requirements in the Requirement Specification Document are achieved by applying modularity and seperation of concerns, which will be shown in the UML diagrams. Table 1 maps requirements to each class supporting that requirement.\\
 
+\newpage
+\begin{center}
+Table 1: Modules contributing to requirements
+
+\textbf{FR:} functional requirement, \textbf{NF:} non-functional requirement\\\end{center}
 
 \begin{adjustbox}{width= 16.5cm}
+
+\newline
 \centering
 \begin{tabular}{| l | l |}
 \hline
-\textbf{Requirements} & \textbf{Modules}\\
+\textbf{Requirements} & \textbf{Contributing modules}\\
 \hline
-Reading input file and dealing with corrupted data (Funcitonal)& WORM.java,FileProcessor.java \\
+\textbf{FR1.} Reading input file and correcting corrupted data & WormsAPI.java, FileProcessor.java \\
 \hline
-List of species by family, order, genus  (Funcitonal)& KDT.java, RangeHelper.java, Quickselect.java \\
+\textbf{FR2.} Generate output file & \textit{none --- replaced by command-line tool and web GUI} \\
 \hline
-Historical distribution of records  (Funcitonal) & Histogram.java, RedBlackTree.Java, BasicSearch.java \\
+\textbf{FR3.} List of species by family, order, genus & BioTree.java, TaxonNode.java \\
 \hline
-Geographical subgroupings  (Funcitonal) & Graph.java, CC.java \\
+\textbf{FR4.} Historical distribution of records & Histogram.java, RedBlackTree.Java, BasicSearch.java \\
 \hline
-Plotting/mapping tools &  BasicSearch.java, CC.java (With Google Maps API) \\
+\textbf{FR5.} Basic search by family, genus, species, time, location, etc. & BasicSearch.java, KDT.java \\
 \hline
-Fast Speed (Non-functional) & KDT.java, Quickselect.java, and RedBlackTree.java \\
+\textbf{FR6.} Geographical subgroupings & Cluster.java, RecordCluster.java, Graph.java, CC.java \\
 \hline
-Low Memory Usage (Non-functional) & KDT.java, Quickselect.java, and RedBlackTree.java \\
+\textbf{FR7.} Plotting/mapping tools & BasicSearch.java, CC.java, Google Maps API, tomcat) \\
 \hline
-Scalable (Non-functional) & KDT.java, Quickselect.java, and RedBlackTree.java \\
+\textbf{NR1.} Accuracy & KDT.java, TestBio.java, TestBasicSearch.java \\
+\hline
+\textbf{NR2.} Robustness & FileProcessor.java, BioTree.java, Main.java, tomcat server \\
+\hline
+\textbf{NR3.} Fast speed & KDT.java, QuickSelect.java, and RedBlackTree.java \\
+\hline
+\textbf{NR4.} Low memory usage & BioTree.java, DataStore.java \\
+\hline
+\textbf{NR5.} Scalability & KDT.java, QuickSelect.java, and RedBlackTree.java \\
+\hline
+\textbf{NR6.} User-friendly & Main.java, tomcat, Google Maps API, Graphical histogram \\
 \hline
 \end{tabular}
-\end{adjustbox}
+\label{tab:Req}
+\end{adjustbox} 
 
 
 \subsection{Class Organization}
-An overview of the modules included in the \textit{TrawlExpert} is shown in figure \ref{fig:UML}. The \textit{Trawl Expert} implementation efforts were divided into two subteams: Subteam A and Subteam B. Tasks were assigned so as to maximize the parallelization of the development process. As a byproduct, modules were designed to uphold the principles of information hiding, modularity and separation of concerns.
+An overview of the modules included in the \textit{TrawlExpert} is shown in figure \ref{fig:UML}. The \textit{TrawlExpert} implementation efforts were divided into two subteams: Subteam A and Subteam B. Tasks were assigned so as to maximize the parallelization of the development process. As a biproduct, modules were designed to uphold the principles of information hiding, modularity and separation of concerns.
 
 Using Java packages, related modules were grouped together to form packages of closely-related logic, as well as to ensure that modules were organized and easy to find. This section describes a package-level description of each one and justification for this modular decomposition.
 
+By breaking up modules into generic pieces in this way, the team was able to parallelize development efforts and agreement on APIs allowed for smooth integration between the subteams' efforts. Effective communication ensured that while subteams were working on independent projects concurrently, all team members were aware of work being done throughout the team.
+
 \subsubsection{model Package}
-This class represents the model of the \textit{TrawlExpert} platform. It provides wrapper hooks to function deeper inside the codebase, which allows different views to be used separately from the internal functionality. Two such views are the command-line interface in \texttt{main/Main.java} and the web interface through the tomcat server. This design allows any such view to be built upon the foundation of the model, without needing to edit any underlying code.
+This package includes the class representing the model of the \textit{TrawlExpert} platform. \texttt{TrawlExpert.java} provides wrapper hooks to function deeper inside the codebase, which allows different views to be used separately from the internal functionality. Two such views are the command-line interface in \texttt{main/Main.java} and the web interface through the tomcat server. This design allows any such view to be built upon the foundation of the model, without needing to edit any underlying code.
 
 \subsubsection{data Package}
-The top-level data package contains three main types of modules: abstract data types (e.g. Record, TaxonNode, Date), abstract objects (e.g. BioTree, DataStore) and supporting modules such as WormsAPI.
+The top-level \texttt{data} package contains three main types of modules: abstract data types (e.g. \texttt{Record}, \texttt{TaxonNode}, \texttt{Date}), abstract objects (e.g. \texttt{BioTree}, \texttt{DataStore}) and supporting modules such as \texttt{WormsAPI}.
 
-Abstract data types such as Record are classes for representing and accessing certain types of information in our dataset. For example, Record is the representation of a single line of the dataset (including Taxon ID, latitude, longitude and date). Each ADT was designed to uphold the principle of encapsulation and provides methods for accessing data relevant to the ADT.
+Abstract data types such as \texttt{Record} are classes for representing and accessing certain types of information in our dataset. For example, \texttt{Record} is the representation of a single line of the dataset (including taxon ID, latitude, longitude and date). Each ADT was designed to uphold the principle of encapsulation and provides methods for accessing data relevant to the ADT.
 
 Abstract singleton objects were used to provide a central storage location for data. For example, BioTree contains information about the biological classification within the dataset. Since they are singleton objects, data can always be accessed from anywhere else in the program which needs it (see figure \ref{fig:UML}) without needing to pass references to objects. Similarly, DataStore provides a central location for the storage of Records in the dataset in a kd-tree structure.
 
 \subsubsection{search Package}
-The search package provides several generic search structures such as Red-Black Tree and kd-tree
+The \texttt{search} package provides several generic search structures such as Red-Black Tree and kd-tree. It also contains a sub-package search.trawl which contains client code that utilizes these search structures to provide \textit{TrawlExpert}-specific searching.
+
+Firstly, search and \texttt{search.kdt} provide generic kd-tree and Red-Black Tree implementations. These each utilize the \texttt{GeneralCompare} interface for maximum generality.
+
+Secondly, \texttt{search.trawl} provides the \texttt{BasicSearch} module. This module is the access point for range-searching the dataset of \texttt{Record} objects in the \texttt{DataStore}. The \texttt{BasicSearchResult} class is the type of object returned from a range search, providing metadata about the search (such as the amount of time taken to find the results) as well as wrapper functions for generating histograms, clusters and sums of the data. In the case of histogram and sum, these results are cached after the first time it is called to improve performance if those fields are accessed again.
 
 \subsubsection{sort Package}
+The \texttt{sort} package includes modules such as \texttt{MergeSort} and \texttt{QuickSelect} as well as the custom interfaces \texttt{GeneralCompare}, \texttt{GeneralRange} and \texttt{Field}.
+
+The \texttt{MergeSort} package was designed using generic typing and using the \texttt{GeneralCompare} interface means that it is even more flexible than using the regular Java \texttt{Comparable} interface. This class ended up being largely replaced by the \texttt{QuickSelect} class which served our purposes better. However, \textbf{MergeSort} is still used for sorting scientific names for the web interface, a small but integral part of the UI.
 
 \subsubsection{graph Package}
+The \texttt{graph} package provides functionality and abstract data types for constructing undirected graphs with a given number of nodes. It also contains the \texttt{CC} class for outputting connected components of the graph in question.
+
+Additionally, the \texttt{graph} package includes the client code relevant to \textit{TrawlExpert}, including \texttt{Cluster.java} and \texttt{RecordCluster.java}. These provide the functionality for clustering a given section of the dataset into related subpopulations based on a user-defined area of similarity amongst the records.
 
 \subsubsection{utils Package}
+The \texttt{utils} package contains miscellaneous helpful utilities for the \textit{TrawlExpert}. At present, the only contained class is \texttt{Stopwatch.java} which provides the method for timing how long a \texttt{BasicSearch} query takes to complete.
 
 \subsubsection{web Package}
+The \texttt{web} package contains the controller (\texttt{Director.java}) and the startup scripts (\texttt{StartUpContext.java}) for the tomcat server. \texttt{Director} routes requests to the correct views in a model-view-controller-based setup. \texttt{StartUpContext} loads the TrawlExpert data into persistent memory on the tomcat server, allowing for fast lookups of data from memory. 
+
+Most of the other Java Server Pages (.jsp) files are contained in \texttt{tomcat/webapps/Trawl/}. Since this is not a focus of the project, these are not covered further in this design document.
 
 \begin{figure}
 \centering
@@ -192,14 +238,14 @@ Two UML state machine diagrams are included to describe the states and transitio
 The UML digrama for the Main.java class is shown in \ref{fig:MainUML}. This represents the \textit{TrawlExpert} console application's states, giving an overview of the types of queries and functions the user has access to. Since the \textit{Main.java} class is a console version of the final server implementation, the states shown in its UML state machine diagram are analogous to many of the states of the final \textit{TrawlExpert} website.
  
 \subsubsection{BioTree.java}
-The UML state diagram for the BioTree module is shown in figure \ref{fig:BioTreeUML}. The BioTree class is a singleton class which stores the information about the different taxa in the dataset. This method has a few advantages. Firstly, the string names and relationships amongst taxa (e.g. species, genus, family) are stored only once and accessed when needed, saving large amounts of memory compared to the original dataset. For example, the original .csv file of the dataset was approximately 130mb. After running through the TrawlExpert, the serialized dataset representing the same data is only 27mb. This is because there was a large amount of duplication of names on each line of the dataset.
+The UML state diagram for the BioTree module is shown in figure \ref{fig:BioTreeUML}. The BioTree class is a singleton class which stores the information about the different taxa in the dataset. This method has a few advantages. Firstly, the string names and relationships amongst taxa (e.g. species, genus, family) are stored only once and accessed when needed, saving large amounts of memory. After running through the TrawlExpert, the serialized dataset representing the same data is only 27mb, requiring very little storage on the user's computer.
 
 Secondly, this diagrams represents a key feature of \textit{TrawlExpert} in that it is able to recover corrupted data as the dataset is processed, which is very helpful for large datasets. In the USGS dataset, for example, there were 115 instances of different incorrectly named taxa, totalling 15,596 records (almost 6\% of the records in the dataset). Using this method, these records were able to be recovered for proper use by the scientist. Using smart caching of incorrect names described by this UML diagram, the number of API calls to WORMS is kept at a minimum and the dataset processing only takes about 3 minutes. After the initial processing, the BioTree and records are stored as serialized Java objects to the disc, and can be reloaded in less than 10 seconds.
 
 % Include explanations of why we divided it into some of its main sections/classes
 
 \begin{figure}[H]
-\includegraphics[width=18cm, trim={6cm 0 6cm 0}, clip]{MainDotJava.pdf}
+\includegraphics[width=18cm, trim={4.5cm 0 3cm 0}, clip]{MainDotJava.pdf}
 
 \caption{UML State machine diagram for \textit{main/Main.java}, a class that provides console access to the \textit{TrawlExpert}'s main functions. This class accepts search criteria from a user to produce a list of search results, depict a histogram of the records in that result, and compute a count of the search hits.}
 \label{fig:MainUML}
@@ -218,9 +264,9 @@ Secondly, this diagrams represents a key feature of \textit{TrawlExpert} in that
 The \textit{TrawlExpert} was made possible by the use of vaious algorithms studied in \textit{SFWRENG 2C03: Algorithms} offered at McMaster University. These algorithms include \textit{Red-Black Tree} for searching and \textit{Merge Sort} for sorting objects. Additional algorithms outside of the course scope were implemented to optimize the program; they are described below. 
 
 \subsection{Quick Select}
-A modified form of the \textit{Quick Sort} algorithm that returns the $k^{th}$ largest element of an unsorted array. Similar to \textit{Quick Sort}, \textit{Quick Select} randomly chooses a partitioning element to sort the array such that all elements smaller than the partition are left of it, and larger elements are to the right. However, rather than recursively sorting both halves of the partitioned array, \textit{Quick Select} only sorts the half containing the $k^{th}$ index. The algorithm terminates once the partitioning element ends up at the $k^{th}$ index of the array, the value of this element is returned.
+A modified form of the \textit{QuickSort} algorithm that returns the $k^{th}$ largest element of an unsorted array. Similar to \textit{QuickSort}, \textit{QuickSelect} randomly chooses a partitioning element to sort the array such that all elements smaller than the partition are left of it, and larger elements are to the right. However, rather than recursively sorting both halves of the partitioned array, \textit{QuickSelect} only sorts the half containing the $k^{th}$ index. The algorithm terminates once the partitioning element ends up at the $k^{th}$ index of the array, the value of this element is returned.
 
-This algorithm is implemented in \textit{/sort/QuickSelect.java}. It is used during the construction of \textit{k-d tree}s which require the frequent division of an array into two equally sized halves. By finding the median element of an array, it is partially sorted into equally sized small and large halves. The \textit{Quick Select} class implements a \textit{median} method to simplify its usage in \textit{k-d tree} construction. 
+This algorithm is implemented in \textit{/sort/QuickSelect.java}. It is used during the construction of \textit{k-d tree}s which require the frequent division of an array into two equally sized halves. By finding the median element of an array, it is partially sorted into equally sized small and large halves. The \textit{QuickSelect} class implements a \textit{median} method to simplify its usage in \textit{k-d tree} construction. 
 
 % Mention optimization for Worms API
 
@@ -268,13 +314,19 @@ The \textit{Field} interface can be found at \textit{/search/Field.java}. This i
 The \textit{GeneralRange} interface can be found at \textit{/sort/GeneralRange.java}. This interface includes a \textit{isInBounds} function returns an integer to describe if a record is member to a subset of the search results. The input has a generic type, rather than \textit{Record} type, to satisfy reusability. The lambda function uses the range itself to perform conditional checks about whether the input object is below, within, or above the range. A return value of -1 indicates it is below, 0 indicates it is within, and 1 indicates it is above the range.
 
 \section{Internal Review}
+Table 1 shows the modules responsible for helping to meet the functional and non-functional requirements laid out in the Requirements Specification Document. This section describes in more detail how these were met.
+
 \subsection{Meeting Functional Requirements}
-The first challenge in developing this tool was parsing the data. One requirement was to read and clean the data, then produce a data structure of Record objects. The software tool performed this task as planned, and even exceeded expectations by using a \textit{k-d tree} to store the Records in an easily accessible manner. Another requirement was to accomplish basic searching capabilities based on input criteria. This aspect was achieved through efficient sorting and searching algorithms, the results were verified using JUnit test cases of all searching and sorting algorithms.
+The first challenge in developing this tool was parsing the data. One requirement was to read and clean the data, then produce a data structure of Record objects (\textbf{FR1}). The software tool performed this task as planned, and even exceeded expectations by using a \textit{k-d tree} to store the Records in an easily and quickly accessible manner and the \texttt{BioTree} module had tools to recover corrupt data. \textbf{FR3} described a requirement to be able to list related taxa (family, genus, species, etc) in an intelligent way, which was achieved by the \texttt{BioTree} module as well. \textbf{FR4} was achieved by the \texttt{Histogram} module which generated a histogram that was displayed on the command-line and web GUI interfaces. Another requirement was to accomplish basic searching capabilities based on input criteria (\textbf{FR5}). This aspect was achieved through efficient sorting and searching algorithms, the results were verified using JUnit test cases of all searching and sorting algorithms. The geographical subgroupings (\textbf{FR6}) was achieved by using an undirected graph structure and connected component analysis.
+
+The requirement of outputting records to .csv was not completed \textbf{FR2} as it was replaced by efforts in the command-line interface and web GUI. It should be explored further in the future.
 
 \subsection{Meeting Non-Functional Requirements}
-In terms of meeting non-functional requirements, the team met expectations. The use of the Worms API when parsing the dataset improved robustness and algorithmic choices such as \textit{Quick Select} and \textit{k-d tree}s improved performance. The final product achieved the requirement of being user-friendly since it is easily accessible via the Google Cloud server and prevents the user from entering invalid search criteria. 
+In terms of meeting non-functional requirements, the team met expectations. The use of the WORMS API when parsing the dataset improved robustness (\textbf{NR2}) and algorithmic choices such as \textit{QuickSelect} and \textit{kd-tree}s improved performance (\textbf{NR3, NR5}). The final product achieved the requirement of being user-friendly (\textbf{NR6}) since it is easily accessible via the Google Cloud server and prevents the user from entering invalid search criteria. 
 
-Additional goals included using less than 1 GB of RAM, this was achieved since the \textit{TrawlExpert} used approximately 0.5 GB of RAM. An additional goal was to perform queries in less than 1 second, this was achieved. A positive team dynamic throughout the development process ensured collaboration and help were always offered, this was a large contributing factor to the success of the final product. 
+Additional goals included using less than 1GB of RAM (\textbf{NR4}), this was achieved since the \textit{TrawlExpert} used approximately 0.5 GB of RAM. One way this was achieved was storing duplicate data (e.g. scientific name strings) only once. An additional goal was to perform queries in less than 1 second (\textbf{NR3}), this was achieved, with many queries taking approximately 1-10ms. 
+
+A positive team dynamic throughout the development process ensured collaboration and help were always offered, this was a large contributing factor to the success of the final product. 
 
 \subsection{Changes During Development}
 There were some algorithmic changes that were realized during development. Two key algorithmic changes were the change from \textit{Merge Sort} to using \textit{Quick Select}, and changing cluster groups of Connected Components. As discussed in Algorithmic Opportunities, the use of \textit{Quick Select} dramatically improved performance. 
@@ -288,7 +340,9 @@ While \textit{TrawlExpert} met all of its original goals for this stage of its d
 Most of the changes that would benefit the \textit{TrawlExpert} involve its development requirements. The original goals for this section were quite extensive, however one aspect that was overlooked was file organization. Although GitLab was used for version control, confusion still occurred over which packages certain classes belonged to. For example, there were instances in the project where a search class would be located in the graph package. Adding a requirement for file organization would make the project more easily accessible in the development process and would also yield more efficient workflow because less time would be dedicated to searching for a desired class. 
 
 \subsubsection{Future Functionality}
-Functionally, there are many future goals in the development of \textit{TrawlExpert}. This phase of the development process was aimed at providing scientists with an effective tool to search and filter data relevant to their research, as well as some basic statistical tools. However, this only represents the first stage in a larger scientific research pipeline. Often, more advanced tools such as stratified statistical analysis is needed to properly take into account the many variables in trawl survey expeditions (FIXME: ref). The future work includes building these tools into \textit{TrawlExpert} in order to create an all-in-one research platform for trawl surveys.
+Functionally, there are many future goals in the development of \textit{TrawlExpert}. This phase of the development process was aimed at providing scientists with an effective tool to search and filter data relevant to their research, as well as some basic statistical tools. However, this only represents the first stage in a larger scientific research pipeline. Often, more advanced tools such as stratified statistical analysis is needed to properly take into account the many variables in trawl survey expeditions \citep{walsh1997efficiency}. The future work includes building these tools into \textit{TrawlExpert} in order to create an all-in-one research platform for trawl surveys.
+
+Additionally, the original requirements specification stated that the program should be able to output subsets of the dataset to .csv files (\textbf{FR2}). This was replaced by the command-line interface in \texttt{Main.java} and the web GUI, but should be explored further in the future as it would be helpful to scientists interested in obtaining raw data for further analysis.
 
 \clearpage
 \bibliographystyle{apa}
