slight changes to BioTree UML

--- a/designSpec/designSpec.tex
+++ b/designSpec/designSpec.tex
@@ -253,9 +253,9 @@ Secondly, this diagrams represents a key feature of \textit{TrawlExpert} in that
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=18cm, trim={0 0 0 0}, clip]{BioTreeDotJava.pdf}
+\includegraphics[width=18cm, trim={1.3cm 0 0 0}, clip]{BioTreeDotJava.pdf}
 
-\caption{UML State machine diagram for \textit{/data/biotree/BioTree.java}, a class that builds a tree data structure from the scientific name hierarchies (called taxa) of fish. Uses a World Register of Marine Species (Worms) API to identify the correct spelling of species names for misspelled scientific names in the dataset. }
+\caption{UML State machine diagram for \textit{/data/biotree/BioTree.java}, a class that builds a tree data structure from the scientific name hierarchies (taxa) of fish. Uses the World Register of Marine Species (WORMS) API to identify the correct spelling of species names for misspelled scientific names in the dataset. }
 \label{fig:BioTreeUML}
 \end{figure}
 
