lots of comments & other updates

--- a/designSpec/designSpec.tex
+++ b/designSpec/designSpec.tex
@@ -225,7 +225,7 @@ Most of the other Java Server Pages (.jsp) files are contained in \texttt{tomcat
 
 \begin{figure}
 \centering
-\includegraphics[angle=90,width=14cm]{ClassUML.png}
+\includegraphics[angle=90,width=14cm]{../UML.png}
 \caption{The UML class diagram of TrawlExpert, showing the relationships amongst modules. The full-resolution version is available in the root directory of the submission archive as \texttt{UML.png}.}
 \label{fig:UML}
 \end{figure}
