add original date to ReqDoc

--- a/Reqdoc/reqDoc.tex
+++ b/Reqdoc/reqDoc.tex
@@ -26,7 +26,7 @@
 
 \title{\textbf{TrawlExpert Requirements Specification Document}}
 \author{Trawlstars Inc. (Group 11) \\ Lab section: L01 \\SFWRENG 2XB3 \\ \\ Christopher W. Schankula, 400026650, schankuc \\ Haley Glavina, 001412343, glavinhc \\ Winnie Liang, 400074498, liangw15 \\ Ray Liu, 400055250, liuc40 \\ Lawrence Chung, 400014482, chungl1}
-
+\date{February 25th, 2018 (Last Updated: April 11th, 2018)}
 
 \maketitle
 
