--- a/designSpec/designSpec.tex
+++ b/designSpec/designSpec.tex
@@ -223,6 +223,9 @@ The \texttt{web} package contains the controller (\texttt{Director.java}) and th
 
 Most of the other Java Server Pages (.jsp) files are contained in \texttt{tomcat/webapps/Trawl/}. Since this is not a focus of the project, these are not covered further in this design document.
 
+\subsubsection{test Package}
+The \texttt{test} package contains JUnit test cases for all of the modules in the program.
+
 \begin{figure}
 \centering
 \includegraphics[angle=90,width=14cm]{../UML.png}
