a few modifications to the design report, removing some useless files

--- a/designSpec/designSpec.tex
+++ b/designSpec/designSpec.tex
@@ -41,6 +41,7 @@
   \vhEntry{1.1}{08.04.18}{HG}{algorithmic analysis added}
   \vhEntry{1.2}{10.04.18}{RL}{added Modular structure and uses}
   \vhEntry{1.3}{11.04.18}{CS}{added 2.3.x subsections}
+  \vhEntry{1.4}{11.04.18}{LC \& CS}{final revisions}
 \end{versionhistory} 
 
 \noindent\textit{By virtue of submitting this document we electronically sign and date that the work being submitted by all the individuals in the group is their exclusive work as a group and we consent to make available the application being developed through SE-2XB3 project, the reports, presentations, and assignments (not including my name and student number) for future teaching purposes.}
