update deployment document and version number on Main.java

--- a/designSpec/designSpec.tex
+++ b/designSpec/designSpec.tex
@@ -25,7 +25,7 @@
 \begin{document}
 
 \title{\textbf{TrawlExpert: A Tool for Watershed Biological Research}}
-\author{Trawlstars Inc. (Group 11) \\ Lab section: L01  \\ Version: 1.0 \\ SFWRENG 2XB3 \\ \\ Christopher W. Schankula, 400026650, schankuc \\ Haley Glavina, 001412343, glavinhc \\ Winnie Liang, 400074498, liangw15 \\ Ray Liu, 400055250, liuc40 \\ Lawrence Chung, 400014482, chungl1\\}
+\author{Trawlstars Inc. (Group 11) \\ Lab section: L01  \\ Version: 1.0 \\ SFWRENG 2XB3 \\ \\ Christopher W. Schankula \\ Haley Glavina \\ Winnie Liang \\ Ray Liu \\ Lawrence Chung\\}
 
 
 \maketitle
